--- a/ioc.html
+++ b/ioc.html
@@ -4,7 +4,7 @@
     <body class="iocbody">
         <p>
             <img class="logo" src="arlogo.png">
-            <h2>Sentinel IOC Submission</h2>
+            <h2>Azure Sentinel IOC Submission</h2>
         </p>
         <br/>
         <h3>IOC Information</h3>
