--- a/ioc.html
+++ b/ioc.html
@@ -58,8 +58,9 @@
         <br/>
         <footer>
             <p>Author: Arbala Security</p>
-            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Mutiltool Documentation</a></p>
+            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Multi-tool Documentation</a></p>
             <p><a href="https://github.com/Arbala-Security"  target="_blank">https://github.com/Arbala-Security</a></p>
+            <p>version 0.0.2.1</p>
         </footer>
     </body> 
     <script src="ioc.js"></script>
