--- a/ioc.html
+++ b/ioc.html
@@ -36,6 +36,18 @@
             <br/>
             <br/>
             <br/>
+        </div>
+        <br/>
+        <textarea id="description" rows="5" cols="50"></textarea>
+        <br/>
+        <br/>
+        <br/>
+        <div class="info">
+            <img src="100pxBlueQuestion.png" width="12px" height="12px" >
+            <span class="infotext">Customize a set of tags for the IOCs.</span>
+        </div>
+        <label class="label" for="tags">Tags</label>
+        <div class="rightc">
             <label class="label" for="tlplevel">TLP Level</label>
             <br/>
             <select class="picklist" name="tlplevel" id="tlplevel">
@@ -46,7 +58,7 @@
             </select>
         </div>
         <br/>
-        <textarea id="description" rows="5" cols="50"></textarea>
+        <textarea id="tags" rows="5" cols="50"></textarea>
         <br/>
         <br/>
         <button id="extract">Extract IOCs</button>
@@ -58,7 +70,7 @@
             <p>Author: Arbala Security</p>
             <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Multi-tool Documentation</a></p>
             <p><a href="https://github.com/Arbala-Security"  target="_blank">https://github.com/Arbala-Security</a></p>
-            <p>version 0.0.3.0</p>
+            <p>version 0.0.4.0</p>
         </footer>
     </body> 
     <script src="ioc.js"></script>
